JILI : update