@@ -1,5 +1,6 @@
 package com.nextgen.gameaggregator.vendor.jili.service;
 
+import com.nextgen.gameaggregator.vendor.jili.constant.Formats;
 import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.codec.digest.DigestUtils;
@@ -8,6 +9,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.MultiValueMap;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.List;
@@ -20,35 +22,29 @@ public class VendorService {
 
     private String agentId;
     private String agentKey;
-    private static String dateFormat = "yyMMd";
-    private static String timeZone = "America/Anguilla"; // UTC-4
-    private static int randomStringLength = 6;
 
-    public static String dateGenerator(String dateFormat, String timeZone) throws Exception{
+    public static String dateGenerator(String dateFormat, String timeZone) {
 
         SimpleDateFormat sdf = new SimpleDateFormat(dateFormat);
         sdf.setTimeZone(TimeZone.getTimeZone(timeZone));
 
         return sdf.format(new Date());
     }
-    public static String urlQueryStringGenerator(MultiValueMap<String, String> params) throws Exception {
+    public static String urlQueryStringGenerator(MultiValueMap<String, String> params) {
 
         StringBuilder sb = new StringBuilder();
         for (String key : params.keySet()) {
             List<String> values = params.get(key);
             for (String value : values) {
-                sb.append(URLEncoder.encode(key, "UTF-8"));
+                sb.append(URLEncoder.encode(key, StandardCharsets.UTF_8));
                 sb.append("=");
-                sb.append(URLEncoder.encode(value, "UTF-8"));
+                sb.append(URLEncoder.encode(value, StandardCharsets.UTF_8));
                 sb.append("&");
             }
         }
-        sb.deleteCharAt(sb.length() - 1); // remove the last '&'
-        String URL_Query =  sb.toString();
-
-        return URL_Query;
+        return sb.deleteCharAt(sb.length() - 1).toString(); // remove the last '&'
     }
-    public static String md5Generator(String input) throws Exception {
+    public static String md5Generator(String input) {
         return DigestUtils.md5Hex(input);
     }
 
@@ -56,11 +52,11 @@ public class VendorService {
         return RandomStringUtils.randomAlphanumeric(length);
     }
 
-    public String gKeyGenerator() throws Exception {
-        return md5Generator(dateGenerator(VendorService.dateFormat, VendorService.timeZone)+this.agentId+this.agentKey);
+    public String gKeyGenerator() {
+        return md5Generator(dateGenerator(Formats.DATE_FORMAT, Formats.TIME_ZONE)+this.agentId+this.agentKey);
     }
 
-    public String keyGenerator(MultiValueMap<String, String> params) throws Exception {
-        return randomStringGenerator(VendorService.randomStringLength)+md5Generator(urlQueryStringGenerator(params)+gKeyGenerator())+randomStringGenerator(VendorService.randomStringLength);
+    public String keyGenerator(MultiValueMap<String, String> params) {
+        return randomStringGenerator(Formats.RANDOM_STRING_LENGTH)+md5Generator(urlQueryStringGenerator(params)+gKeyGenerator())+randomStringGenerator(Formats.RANDOM_STRING_LENGTH);
     }
 }
